Archive2/bc/6d5f5c83248249/output
main.cpp:22:15: error: template specialization requires 'template<>'
Test<Type_1>::Test()
~~~~~~~~~~~~  ^
template<> 
main.cpp:27:15: error: template specialization requires 'template<>'
Test<Type_1>::~Test()
~~~~~~~~~~~~  ^
template<> 
main.cpp:32:15: error: template specialization requires 'template<>'
Test<Type_2>::Test()
~~~~~~~~~~~~  ^
template<> 
3 errors generated.
